--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: hello-world
 on: push 
 jobs:
   my-job:
-    runs-on: macos-11
+    runs-on: windows-latest
     steps:
       - name: message 
-        run: echo "Hello World!"
+        shell: pwsh 
+        run: |
+          gci env:* | sort-object name 
