--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
       - name: Checkout 
         uses: actions/checkout@v3 
-      - name: list the files 
-        run: ls -l 
+      - name: Update website  
+        run: cp -vrf . /var/www/html
+      - name: Check files 
+        run: ls -l /var/www/html
