--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v3 
       - name: Checking Docker Images   
+        shell: pwsh
         run: docker images 
       - name: Checking Running Containers  
+        shell: pwsh
         run: docker ps
