--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,5 @@ jobs:
         uses: actions/checkout@v3 
       - name: Checking Docker Images   
         shell: pwsh
-        run: docker images 
-      - name: Checking Running Containers  
-        shell: pwsh
-        run: docker ps
+        run: |
+          docker version
