--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v3 
       - name: Checking Docker Images   
-        shell: powershell
+        shell: cmd
         run: |
           docker version
