--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,4 @@ jobs:
         uses: actions/checkout@v3 
       - name: Checking Docker Images   
         shell: cmd
-        run: |
-          docker version
+        run: docker images
