--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - name: Checkout 
         uses: actions/checkout@v3 
-      - name: Checking Docker Images   
+      - name: Build Images   
         shell: cmd
         run: docker build -t jaibw/demo-git-repo . 
+      - name: Push Image
+        shell: cmd
+        run: docker push jaibw/demo-git-repo
