--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,21 @@
-name: nginx-deployment 
-on: push 
+name: "File existence check"
+
+on: [push, pull_request]
+
 jobs:
-  my-job:
-    runs-on: Windows
+  file_existence:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout 
-        uses: actions/checkout@v3 
-      - name: Build Images   
-        shell: cmd
-        run: docker build -t jaibw/demo-git-repo . 
-      - name: Push Image
-        shell: cmd
-        run: docker push jaibw/demo-git-repo
-      - name: Kubernetes Deployment 
-        shell: cmd
-        run: kubectl apply -f k8s.yaml
-      - name: Test 
-        shell: cmd
-        run: kubectl get all 
-        
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v2
+        with:
+          files: "k8s.yaml"
+
+      - name: File exists
+        if: steps.check_files.outputs.files_exists == 'true'
+        # Only runs if all of the files exists
+        run: echo All files exists!
