--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2
         with:
-          files: "k8s.yaml"
+          files: "k8ssss.yaml"
 
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'true'
